[workspace]
members = ["gc"]

[package]
name = "lpc"
version = "0.1.0"
authors = ["Remi Rampin <r@remirampin.com>"]
edition = "2018"
description = "Locked Pancake, a stack-based VM for untrusted scripts"
repository = "https://github.com/remram44/locked-pancake"
readme = "README.md"
keywords = ["scripts", "scripting", "interpreter", "bytecode"]

[[bin]]
name = "lpc"
path = "src/main.rs"

[dependencies]
num-derive = "0.3"
num-traits = "0.2"
